[package]
name = "onepl"
version = "0.1.0"
edition = "2021"
authors = ["Bill Ryder <bill.ryder.nz@gmail.com>"]
license = "MIT"
description = "Parallel tools fed by 'one per line' lines. And JSON equivalent"
readme = "README.md"
homepage = "https://github.com/bryder/onepl"
repository = "https://github.com/bryder/onepl"
keywords = ["cli", "ssh"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
